# rust_os

./: Cargo.toml
.cargo/: config
src/: main.rs  vga_buffer.rs
