[package]
name = "rust_os"
version = "0.1.0"
authors = ["HadyElzayady <hadyelzayady@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#used when run cargo build
[profile.dev]
panic = "abort"

#used when run cargo build --release
[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.0"
